name:                gcm
version:             0.0.1
synopsis:            Send notification through Google Cloud Messaging
description:         Please see README.md
homepage:            http://github.com/jimpeak/gcm#readme
license:             BSD3
license-file:        LICENSE
author:              Andre Paquet
maintainer:          andre.paquet@gmail.com
copyright:           2016 Andre Paquet
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  build-depends:
    hashmap
    , retry
    , aeson
    , wreq
    , data-default-class
    , transformers
    , text
    , lens
    , bytestring
    , vector

test-suite gcm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gcm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jimpeak/gcm
